Added support for AP to building/floor/occupancy mapping with ingest pipelines

--- a/logstash/logstash-aruba-beats-encrypted.conf
+++ b/logstash/logstash-aruba-beats-encrypted.conf
@@ -6,25 +6,23 @@
 # Messages are parsed, session durations are computing and sent to Elasticsearch for storage
 
 input {
-  beats {
-    port => "5044"
-  }
 
 #
-# If you don't want to use Beats, comment the section above and uncomment the block below.
-# It will read files directly from the given directory and DELETE the files after they are being processed
+# Update the path where to read the files from.
+# Files are processed alphabetically by name (use a good naming convention to match chronological order)
+# If you need to reprocess files that you alreday processed once, uncomment "sincedb_path" and restart LogStash
 #
-#  file {
-#    path => "/elastic/traces/*.encrypted"
-#    start_position => "beginning"
-#    mode => "read"
-#    # sincedb_path => "/dev/null"
-#    exit_after_read => "true"
-#    file_sort_by => "path"
-#    file_sort_direction => "asc"
+  file {
+    path => "/elastic/traces/syslog*.encrypted"
+    start_position => "beginning"
+    mode => "read"
+    # sincedb_path => "/dev/null"
+    exit_after_read => "true"
+    file_sort_by => "path"
+    file_sort_direction => "asc"
+# Uncomment the line below if you want the files to be deleted after being processed
 #    file_completed_action => "delete"
-#  }
-
+  }
 }
 
 filter {
@@ -503,6 +501,7 @@ output {
   elasticsearch {
     index => "covid"
     hosts => "localhost:9200"
+    pipeline => "enrich_building"
   }
 }
 
