--- a/logstash/logstash-aruba-clear.conf
+++ b/logstash/logstash-aruba-clear.conf
@@ -7,21 +7,24 @@ input {
 #    port => "5044"
 #  }
 
+input {
+
 #
-# If you don't want to use Beats, comment the section above and uncomment the block below.
-# It will read files directly from the given directory and DELETE the files after they are being processed
+# Update the path where to read the files from.
+# Files are processed alphabetically by name (use a good naming convention to match chronological order)
+# If you need to reprocess files that you alreday processed once, uncomment "sincedb_path" and restart LogStash
 #
   file {
-    path => "C:\tmp\syslog*"
+    path => "/elastic/traces/syslog*"
     start_position => "beginning"
     mode => "read"
-    sincedb_path => "/dev/null"
+    # sincedb_path => "/dev/null"
     exit_after_read => "true"
     file_sort_by => "path"
     file_sort_direction => "asc"
-    file_completed_action => "delete"
+# Uncomment the line below if you want the files to be deleted after being processed
+#    file_completed_action => "delete"
   }
-
 }
 
 filter {
@@ -500,6 +503,7 @@ output {
   elasticsearch {
     index => "covid"
     hosts => "localhost:9200"
+    pipeline => "enrich_building"
   }
 }
 
