Added APs of traced and contact users in report + sample report

--- a/contact_tracing/logstash-contact-report.conf
+++ b/contact_tracing/logstash-contact-report.conf
@@ -4,19 +4,25 @@ input {
     start_position => "beginning"
     mode => "read"
     #  sincedb_path => "/dev/null"
+    file_completed_action => "log"
+    file_completed_log_path => "/elastic/reports/uploaded_reports.log"
     exit_after_read => "true"
   }
 }
 filter {
   csv {
      separator => ","
-     columns => ["user_name","contact_user","ap_name","start_contact","end_contact","contact_duration", "building" ,"floor"]
+     columns => ["traced_user","contact_user","traced_ap","start_contact","end_contact","contact_duration", "building" ,"floor", "contact_ap"]
+     convert => {
+        "contact_duration" => "float"
+        "floor" => "integer"
+     }
      add_tag => ["contact"]
   }
 }
 output {
    elasticsearch {
      hosts => "localhost:9200"
-     index => "covid"
+     index => "covid-tracing"
   }
 }
